# Image_Analysis_INSA

./: .gitignore  CMakeLists.txt  README.txt
Projet OpenCV-CMake/: .gitignore  CMakeLists.txt  README.txt
Projet OpenCV-CMake/include/: SquareExtractor.h  cross_detector.h  matcher.h  sift.h
Projet OpenCV-CMake/src/: SquareExtractor.cpp  clean.sh  connected.cpp  cross_detector.cpp  histogram.cpp  main_test_opencv.cpp  matcher.cpp  reformat_image.cpp  reformat_image.h  sift.cpp  thresholding.cpp
include/: SquareExtractor.h  cross_detector.h  matcher.h  reformat_image.h  textscan.h
src/: Main.cpp  SquareExtractor.cpp  clean.sh  cross_detector.cpp  main_test_opencv.cpp  matcher.cpp  reformat_image.cpp  textscan.cpp
